# FileForgeToolkit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  build.sh  config.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.py  setup.py  wsgi.py
backend/: __init__.py  config.py  models.py  routes.py  services.py
smart_file_converter/: __init__.py  app.py  config.py  errors.py  extensions.py  health.py  models.py  requirements.txt  routes.py
smart_file_converter/api/: errors.py
smart_file_converter/main/: __init__.py  errors.py  routes.py
smart_file_converter/services/: __init__.py  cloud_storage.py  local_storage.py  ocr_service.py
smart_file_converter/templates/: 500.html
