[tool.poetry]
name = "file-forge-toolkit"
version = "0.1.0"
description = "File conversion and processing toolkit with OCR capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "smart_file_converter"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
Werkzeug = "^2.0.3"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.3"
click = "^8.0.4"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
SQLAlchemy = "^1.4.32"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
Flask-Login = "^0.5.0"
PyJWT = "^2.4.0"
email-validator = "^1.1.3"
Pillow = "^8.4.0"
pdf2image = "^1.16.0"
pytesseract = "^0.3.10"
python-magic = {version = "^0.4.24", platform = "!='win32'"}
python-magic-bin = {version = "^0.4.14", platform = "== 'win32'"}
python-dotenv = "^0.20.0"
Flask-WTF = "^1.0.1"
Flask-Bootstrap = "^3.3.7.1"
Flask-Moment = "^1.0.2"
WTForms = "^3.0.1"
Flask-Mail = "^0.9.1"
python-slugify = "^6.1.2"
requests = "^2.28.1"
python-dateutil = "^2.8.2"
six = "^1.16.0"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
greenlet = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
